upload image on cloud and copy paste image code in index html

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,6 +4,8 @@
 
 <p id="notice"><%= notice %></p>
 <h1>Cocktails</h1>
+<p><%= cl_image_tag("qzqjtw60krdpuqspsd6j",
+      width: 400, height: 300, crop: :fill) %></p>
 <table>
   <thead>
     <tr>
