--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,6 +1,8 @@
 <%= simple_form_for(@cocktail) do |f| %>
   <%= f.error_notification %>
   <%= f.error_notification message: f.object.errors[:base].to_sentence if f.object.errors[:base].present? %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
   <div class="form-inputs">
     <%= f.input :name %>
   </div>
